--- a/build.gradle
+++ b/build.gradle
@@ -13,16 +13,22 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-aop', version: '5.0.6.RELEASE'
     compile group: 'org.springframework', name: 'spring-expression', version: '5.0.6.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version: '5.0.6.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '2.0.1.RELEASE'
+    compile group: 'org.springframework', name: 'spring-webflux', version: '5.0.6.RELEASE'
+    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '2.0.1.RELEASE') {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
 
     compile group: 'io.projectreactor', name: 'reactor-core', version: '3.1.7.RELEASE'
     compile group: 'io.projectreactor', name: 'reactor-test', version: '3.1.7.RELEASE'
     compile group: 'io.projectreactor.ipc', name: 'reactor-netty', version: '0.7.7.RELEASE'
 
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+
     testCompile group: 'org.springframework', name: 'spring-test', version: '5.0.6.RELEASE'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.18.3'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.9.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 }
 
 task wrapper(type: Wrapper) {
