--- a/build.gradle
+++ b/build.gradle
@@ -3,18 +3,21 @@ plugins {
     id 'jacoco'
 }
 
-repositories { mavenCentral() }
+repositories {
+    mavenCentral()
+    maven { url "https://dl.bintray.com/jmad/jmad-repo" }
+}
 
 dependencies {
-    compile group: 'org.jmad', name: 'jmad-core', version: '0.0.0'
-    
+    compile group: 'jmad', name: 'jmad-core', version: '0.1.1'
+
     compile group: 'org.springframework', name: 'spring-core', version: '5.0.6.RELEASE'
     compile group: 'org.springframework', name: 'spring-context', version: '5.0.6.RELEASE'
     compile group: 'org.springframework', name: 'spring-aop', version: '5.0.6.RELEASE'
     compile group: 'org.springframework', name: 'spring-expression', version: '5.0.6.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version: '5.0.6.RELEASE'
     compile group: 'org.springframework', name: 'spring-webflux', version: '5.0.6.RELEASE'
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '2.0.1.RELEASE') {
+    compile(group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '2.0.1.RELEASE') {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
     }
 
