--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ dependencies {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
     }
 
-    //  compile group: 'com.google.code.gson', name: 'gson', version: '2.8.4'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.4'
 
     compile group: 'io.projectreactor', name: 'reactor-core', version: '3.1.7.RELEASE'
     compile group: 'io.projectreactor', name: 'reactor-test', version: '3.1.7.RELEASE'
