now conditionally declare javadoc task in case it is using the CERN Gradle distribution...

--- a/build.gradle
+++ b/build.gradle
@@ -116,14 +116,18 @@ jacocoTestReport {
 
 javadoc { options.encoding = "UTF-8" }
 
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
+if(!project.tasks.findByName("javadocJar")) {
+    task javadocJar(type: Jar) {
+        classifier = 'javadoc'
+        from javadoc
+    }
 }
 
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
+if(!project.tasks.findByName("sourcesJar")) {
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
 }
 
 eclipse {
