--- a/build.gradle
+++ b/build.gradle
@@ -66,17 +66,15 @@ repositories {
 dependencies {
     compile group: 'jmad', name: 'jmad-core', version: '0.1.3'
 
-    compile group: 'org.springframework', name: 'spring-core', version: '5.0.6.RELEASE'
-    compile group: 'org.springframework', name: 'spring-context', version: '5.0.6.RELEASE'
-    compile group: 'org.springframework', name: 'spring-aop', version: '5.0.6.RELEASE'
-    compile group: 'org.springframework', name: 'spring-expression', version: '5.0.6.RELEASE'
-    compile group: 'org.springframework', name: 'spring-beans', version: '5.0.6.RELEASE'
-    compile group: 'org.springframework', name: 'spring-webflux', version: '5.0.6.RELEASE'
-    compile(group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '2.0.1.RELEASE') {
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-    }
+    
+    compile group: 'org.springframework', name: 'spring-core', version: '4.3.13.RELEASE'
+    compile group: 'org.springframework', name: 'spring-context', version: '4.3.13.RELEASE'
+    compile group: 'org.springframework', name: 'spring-aop', version: '4.3.13.RELEASE'
+    compile group: 'org.springframework', name: 'spring-expression', version: '4.3.13.RELEASE'
+    compile group: 'org.springframework', name: 'spring-beans', version: '4.3.13.RELEASE'
+    compile group: 'org.springframework', name: 'spring-web', version: '4.3.13.RELEASE'
 
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.4'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 
     compile group: 'io.projectreactor', name: 'reactor-core', version: '3.1.7.RELEASE'
     compile group: 'io.projectreactor', name: 'reactor-test', version: '3.1.7.RELEASE'
@@ -84,7 +82,7 @@ dependencies {
 
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
-    testCompile group: 'org.springframework', name: 'spring-test', version: '5.0.6.RELEASE'
+    testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.13.RELEASE'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.18.3'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.9.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
