--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,8 @@ repositories {
 dependencies {
     compile group: 'jmad', name: 'jmad-core', version: '0.1.4'
 
-    
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+
     compile group: 'org.springframework', name: 'spring-core', version: '4.3.13.RELEASE'
     compile group: 'org.springframework', name: 'spring-context', version: '4.3.13.RELEASE'
     compile group: 'org.springframework', name: 'spring-aop', version: '4.3.13.RELEASE'
