--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.9.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+    testCompile group: 'pl.pragmatists', name: 'JUnitParams', version: '1.1.1'
 }
 
 task wrapper(type: Wrapper) { gradleVersion = '4.7' }
