--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,13 @@ buildscript {
             maven { url 'http://artifactory.cern.ch/development' }
         } else {
             jcenter()
+            maven { url 'https://plugins.gradle.org/m2/' }
         }
     }
-    dependencies { classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4' }
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.github.jk1:gradle-license-report:1.5'
+    }
 }
 
 apply plugin: 'java'
@@ -142,5 +146,15 @@ idea {
     module {
         downloadJavadoc = true
         downloadSources = true
+    }
+}
+
+if (!project['CERN_VM']) {
+    println 'Applying licensing report'
+    apply plugin: 'com.github.jk1.dependency-license-report'
+
+    licenseReport {
+        renderers = [this.class.classLoader.loadClass('com.github.jk1.license.render.InventoryHtmlReportRenderer').newInstance()]
+        filters = [this.class.classLoader.loadClass('com.github.jk1.license.filter.LicenseBundleNormalizer').newInstance()]
     }
 }
