--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'jmad', name: 'jmad-core', version: '0.4.4'
+    compile group: 'io.jmad', name: 'jmad-core', version: '0.5.0'
 
     compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 
