--- a/build.gradle
+++ b/build.gradle
@@ -1,61 +1,29 @@
 buildscript {
-    project.ext.CERN_VM = System.getProperty('CERN_TECHNET_VM') ?: System.getenv('CERN_TECHNET_VM') ?: false
-    project.ext.DEPLOYMENT = System.getProperty('deployment') ?: false
-    project.ext.VCS_TAG = System.getProperty('TRAVIS_TAG') ?: System.getenv('TRAVIS_TAG')
-    project.ext.POM = [
-        groupId    : 'io.jmad',
-        artifactId : 'jmad-modelpack-service',
-        description: 'Service to retrieve JMad model packages from different sources.'
-    ]
-    project.ext.INFO = [
-        repo            : 'https://github.com/jmad/jmad-modelpack-service.git',
-        url             : 'https://jmad.github.io/',
-        github          : 'https://github.com/jmad/jmad-modelpack-service',
-        githubIssues    : 'https://github.com/jmad/jmad-modelpack-service/issues',
-        licenseNameShort: 'Apache-2.0',
-        licenseName     : 'The Apache License, Version 2.0',
-        licenseUrl      : 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    ]
-    project.ext.BINTRAY = [
-        repo        : 'jmad-repo',
-        name        : 'jmad-modelpack-service',
-        organization: 'jmad',
-        userName    : System.getProperty('BINTRAY_USER') ?: System.getenv('BINTRAY_USER'),
-        apiToken    : System.getProperty('BINTRAY_API_TOKEN') ?: System.getenv('BINTRAY_API_TOKEN')
-    ]
+    project.ext['CERN_VM'] = System.getProperty('CERN_TECHNET_VM') ?: System.getenv('CERN_TECHNET_VM') ?: project.hasProperty('CERN_TECHNET_VM') ?: false
+    project.ext['DEPLOYMENT'] = System.getProperty('DEPLOYMENT') ?: false
 
     repositories {
-        if (CERN_VM) {
-            maven { url 'http://artifactory.cern.ch/gradle-plugins' }
+        if (project['CERN_VM']) {
             maven { url 'http://artifactory.cern.ch/ds-jcenter' }
             maven { url 'http://artifactory.cern.ch/development' }
+            maven { url 'http://artifactory.cern.ch/gradle-plugins' }
         } else {
-            jcenter()
-            maven { url 'https://plugins.gradle.org/m2/' }
+            gradlePluginPortal()
         }
     }
+
     dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         classpath 'com.github.jk1:gradle-license-report:1.5'
+        classpath 'io.github.gradle-nexus:publish-plugin:1.0.0'
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'jacoco'
-apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.bintray'
+apply plugin: 'eclipse'
 
-
-group 'jmad'
-
-sourceCompatibility = JavaVersion.VERSION_1_8
-
-if (DEPLOYMENT) {
-    println 'Applying deployment scripts'
-    apply from: './scripts/bintray-deploy.gradle'
-}
+group = project['POM.groupId']
 
 repositories {
     if (CERN_VM) {
@@ -63,12 +31,11 @@ repositories {
         maven { url 'http://artifactory.cern.ch/development' }
     } else {
         mavenCentral()
-        jcenter()
     }
 }
 
 dependencies {
-    compile group: 'io.jmad', name: 'jmad-core', version: '0.7.3'
+    compile group: 'io.jmad', name: 'jmad-core', version: '0.7.6'
 
     compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 
@@ -98,7 +65,7 @@ dependencies {
 
 wrapper {
     gradleVersion = '5.4.1'
-    distributionUrl = distributionUrl.replace("bin", "all")
+    distributionType = Wrapper.DistributionType.ALL
 }
 
 sourceSets {
@@ -113,6 +80,13 @@ sourceSets {
     }
 }
 
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
+}
+
 jacocoTestReport {
     reports {
         xml.enabled true
@@ -124,6 +98,19 @@ jacocoTestReport {
 
 javadoc { options.encoding = "UTF-8" }
 
+if (!project.tasks.findByName("javadocJar")) {
+    task javadocJar(type: Jar) {
+        classifier = 'javadoc'
+        from javadoc
+    }
+}
+
+if (!project.tasks.findByName("sourcesJar")) {
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+}
 
 eclipse {
     classpath {
@@ -147,4 +134,9 @@ if (!project['CERN_VM']) {
         renderers = [this.class.classLoader.loadClass('com.github.jk1.license.render.InventoryHtmlReportRenderer').newInstance()]
         filters = [this.class.classLoader.loadClass('com.github.jk1.license.filter.LicenseBundleNormalizer').newInstance()]
     }
+}
+
+if (project['DEPLOYMENT']) {
+    println 'Applying deployment scripts'
+    apply from: 'https://raw.githubusercontent.com/ossgang/gradle-scripts/master/deployment/deploy-to-maven-central.gradle'
 }
